<resources>
    <string name="app_name">Widget</string>
    <string name="picture">图片</string>
    <string name="previewExample">预览示例</string>
    <string name="lubanCompression">鲁班压缩</string>
    <string name="syncCompress">同步压缩</string>
    <string name="asyncCompress">异步压缩</string>
    <string name="easing">缓动</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="restart">重启</string>
    <string name="changeInterpolator">改内插器</string>
    <string name="searchBox">搜索框</string>
    <string name="searchBoxOne">搜索框一</string>
    <string name="searchBoxTwo">搜索框二</string>
    <string name="searchBoxThree">搜索框三</string>
    <string name="textView">TextView</string>
    <string name="timer">计时器</string>
    <string name="fill">填</string>
    <string name="filledIn">所填内容</string>
    <string name="originalText">原始文本</string>
    <string name="textPassage">段落</string>
    <string name="animation">动画</string>
    <string name="login">登录</string>
    <string name="loginOne">登录一</string>
    <string name="loginTwo">登录二</string>
    <string name="loginFail">登录失败</string>
    <string name="reveal">揭示</string>
    <string name="packUp">收起</string>
    <string name="dialog">对话框</string>
    <string name="dialogOne">对话框一</string>
    <string name="dialogTwo">对话框二</string>
    <string name="dialogThree">对话框三</string>
    <string name="tryMe">Try me!</string>
    <string name="showMaterialProgress">show material progress</string>
    <string name="aBasicMessage">a basic message</string>
    <string name="a_title_with_a_text_under">a title with a text under</string>
    <string name="showErrorMessage">show error message</string>
    <string name="aSuccessMessage">a success message</string>
    <string name="a_warning_message_with_a_listener_bind_to_the_confirm_button">A warning message, with a listener bind to the Confirm button…</string>
    <string name="aWarningMessageWithListenersBindToCancelAndConfirmButton">A warning message, with listeners bind to Cancel and Confirm button…</string>
    <string name="a_message_with_a_custom_image">a message with a custom image</string>
    <string name="search">搜索</string>
    <string name="list">列表</string>
    <string name="spannableStringBuilder">SpannableStringBuilder</string>
    <string name="screen">筛选</string>
    <string name="spruce">spruce</string>
    <string name="share">分享</string>
    <string name="load">加载</string>
    <string name="paySuccess">支付成功</string>
    <string name="friendSetting">好友设置</string>
    <string name="comment">评论</string>
    <string name="redPacket">红包</string>
    <string name="accountFreezing">账号冻结</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="commentInputHint">说你想说的…</string>
    <string name="publishComment">发表评论</string>
    <string name="setUpNotesAndLabels">设置备注及标签</string>
    <string name="marked_as_a_star_my_friend">标为星标朋友</string>
    <string name="setMomentsPermissions">设置朋友圈权限</string>
    <string name="send_a_business_card">发送名片</string>
    <string name="complain">投诉</string>
    <string name="joinTheBlacklist">加入黑名单</string>
    <string name="delete">删除</string>
    <string name="addToTheDesktop">添加到桌面</string>
    <string name="more">更多…</string>
    <string name="loading">加载中…</string>
    <string name="wechat">微信</string>
    <string name="microblog">微博</string>
    <string name="qqZone">QQ空间</string>
    <string name="qq">QQ</string>
    <string name="wechatCircleOfFriends">微信朋友圈</string>
    <string name="shareTo">分享到</string>
    <string name="voice">语音</string>
    <string name="record">录制</string>
    <string name="play">播放</string>
    <string name="location">定位</string>
    <string name="locationResult">定位结果</string>
    <string name="pudding">pudding</string>
    <string name="exampleOne">示例一</string>
    <string name="exampleTwo">示例二</string>
    <string name="exampleThree">示例三</string>
    <string name="exampleFour">示例四</string>
    <string name="exampleFive">示例五</string>
    <string name="exampleSix">示例六</string>
    <string name="exampleSeven">示例七</string>
    <string name="exampleEight">示例八</string>
    <string name="counter">计数</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="clear">clear</string>
    <string name="singleShot">单发</string>
    <string name="mass">群发</string>
    <string name="sms">短信</string>
    <string name="smsSendSuccess">短信发送成功</string>
    <string name="smsSendFail">短信发送失败</string>
    <string name="smsDeliverSuccess">短信已送达</string>
    <string name="smsDeliverFail">短信未送达</string>
    <string name="contact">联系人</string>
    <string name="noExternalStorage">无外部存储</string>
    <string name="telephony">电话</string>
    <string name="progressBar">进度条</string>
    <string name="multiProgressBar">多样进度条</string>
    <string name="progressWheel">进度轮</string>
    <string name="options">Options:</string>
    <string name="progress">Progress:</string>
    <string name="barColor">Bar color:</string>
    <string name="wheelColor">Wheel color:</string>
    <string name="interpolatedProgress">Interpolated progress:</string>
    <string name="linearProgress">Linear progress:</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="aboutHint">This app is for demonstrate the Material-ish progress wheel library, which provides a Material-style progress wheel compatible back to API 9. You can have indeterminate and determinate versions of the progress wheel, the later with a linear animation or a interpolated one like in the guidelines.\n\nRefer to the Github project page for more info at https://github.com/pnikosis/materialish-progress. </string>
    <string name="layout">布局</string>
    <string name="percentLayout">百分比布局</string>
    <string name="percentLayoutHintOne">宽占父布局宽50%\n\n高占父布局高40%</string>
    <string name="percentLayoutHintTwo">宽占父布局高80%\n\n高占父布局高60%</string>
    <string name="shadowLayout">阴影布局</string>
    <string name="progressLayout">进度布局</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="complete">完成</string>
    <string name="sideDrag">侧拖</string>
    <string name="banner">轮播</string>
    <string name="add">add</string>
    <string name="radarChart">雷达图</string>
    <string name="rippleLayout">波纹布局</string>
    <string name="rippleLayoutDescription">1.Declare a RippleView inside your XML layout file with a content like an ImageView or whatever.\n\n2.If you want to know when the Ripple effect is finished, you can set a listener on your view.\n\n3.If you want to add an OnClickListener don\'t forget to add it to the RippleView.</string>
    <string name="circularReveal">循环揭示</string>
    <string name="circularRevealLayout">循环揭示布局</string>
    <string name="camberLayout">弧形布局</string>
    <string name="card">卡片</string>
    <string name="description">描述</string>
    <string name="focusResize">聚焦调整</string>
    <string name="circularFlex">圆形伸缩</string>
    <string name="startActivityWithPicture">start Activity with picture</string>
    <string name="startActivityWithColor">start Activity with color</string>
    <string name="change">变</string>
    <string name="guide">引导</string>
    <string name="guideOne">引导一</string>
    <string name="guideTwo">引导二</string>
    <string name="buttonOne">按钮一</string>
    <string name="buttonTwo">按钮二</string>
    <string name="toolbar">工具栏</string>
    <string name="connection">连接</string>
    <string name="error">错误</string>
    <string name="connecting">连接中</string>
    <string name="idle">空闲</string>
    <string name="matisse">Matisse</string>
    <string name="select">选择</string>
    <string name="fileProviderAuthorities">com.zsp.widget.fileprovider</string>
    <string name="uploadSuccess">上传成功</string>
    <string name="collapsibleCard">折叠卡片</string>
    <string name="elasticCardView">弹性卡片视图</string>
    <string name="clock">时钟</string>
    <string name="scanCode">扫码</string>
    <string name="scanQrCode">扫二维码</string>
    <string name="scanBarCode">扫条形码</string>
    <string name="errorOpeningTheCamera">打开相机出错</string>
    <string name="tipView">提示视图</string>
    <string name="exampleAnchoredView">Example Anchored View</string>
    <string name="tipTitleOne">Title</string>
    <string name="tipMessageOne">ToolBar Title</string>
    <string name="tipTitleTwo">ToolBar Title</string>
    <string name="tipMessageTwo">ToolTip Message sample. Lorem ipsum dolor sit amet lorem ipsum.</string>
    <string name="tagView">标签视图</string>
    <string name="tagViewDeleteHint">Will be delete. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restore">restore</string>
    <string name="onePartyLibraryExample">一方库示例</string>
    <string name="tripartiteLibraryExample">三方库示例</string>
    <!--format-->
    <string name="callStateRingingStartTime">响铃 开始时间：%1$d</string>
    <string name="callOutStartTime">呼出 开始时间：%1$d</string>
    <string name="hangUpTheCallEndTime">挂断通话 结束时间：%1$d</string>
    <string name="pictureParameters">原始参数：%1$s\n压缩后参数：%2$s</string>
    <string name="flexibility">Flexibility is %1$ff</string>
    <string name="second">%1$d秒</string>
    <!--string-array-->
    <string-array name="progressValueOptions">
        <item>Cycle between 0% and 100%</item>
        <item>0%</item>
        <item>10%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
    </string-array>
    <string-array name="progressColorOptions">
        <item>Default</item>
        <item>Red</item>
        <item>Magenta</item>
    </string-array>
    <string-array name="wheelColorOptions">
        <item>Default</item>
        <item>Light Gray</item>
        <item>Gray</item>
    </string-array>
</resources>
