<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_12"
    tools:context="example.onepartylibrary.dialog.DialogTwoActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogTwoActivityMbShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogTwoActivityMbFriendSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendSetting"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogTwoActivityMbComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogTwoActivityMbRedPacket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redPacket"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogTwoActivityMbLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogTwoActivityMbPaySuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paySuccess"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogTwoActivityMbAccountFreezing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountFreezing"
        android:textAppearance="?android:attr/textAppearanceInverse" />
</LinearLayout>
