<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_12"
    tools:context="example.layout.LayoutActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/voiceActivityMbPercentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentLayout"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/voiceActivityMbShadowLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadowLayout"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/voiceActivityMbRippleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rippleLayout"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/voiceActivityMbCircularRevealLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circularRevealLayout"
        android:textAppearance="?android:attr/textAppearanceInverse" />
</LinearLayout>
