<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_12"
    tools:context="example.onepartylibrary.searchbox.SearchBoxActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchBoxActivityMbSearchBoxOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchBoxOne"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchBoxActivityMbSearchBoxTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchBoxTwo"
        android:textAppearance="?android:attr/textAppearanceInverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchBoxActivityMbSearchBoxThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchBoxThree"
        android:textAppearance="?android:attr/textAppearanceInverse" />
</LinearLayout>
